--- a/SWD/SWD/Content/ContentWindow.xaml
+++ b/SWD/SWD/Content/ContentWindow.xaml
@@ -113,7 +113,7 @@
                         </StackPanel>
                     </Button>
                     <Separator Width="Auto" />
-                    <Button x:Name="btnBuild" ToolTip="Convert project to a webpage!" Margin="0,0,10,0" HorizontalAlignment="Right">
+                    <Button x:Name="btnBuild" ToolTip="Convert project to a webpage!" Margin="0,0,10,0" HorizontalAlignment="Right" Click="btnBuild_Click">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="../Icons/build.png" Width="20" Height="20" Margin="0,0,5,0"/>
                             <TextBlock>Build</TextBlock>
